--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+             <configuration>
+					<source>12</source>
+					<target>12</target>
+					<fork>true</fork>
+					<executable>C:\Program Files\Java\jdk-15.0.1\bin\javac</executable> 
+		  </configuration>  
+
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
